# Langchain-Chatchat

./: .dockerignore  .gitignore  .gitmodules  .model_registrations_emb.sh.swp  ADDITIONAL_LICENSE  CHANGELOG.md  CONTRIBUTING.md  DockerFile  Dockerfile  Dockerfile-cuda  FAQ.md  Image Build ＆ YAML Setup.md  LICENSE  Long_Context_Reorder.ipynb  README.md  README_en.md  README_ja.md  Self Query.ipynb  adapter_config.json  ali.yaml  api.py  api_config.yaml  api_one.py  api_test.py  chatglm_embedding.py  chatglm_llm.py  cli.bat  cli.py  cli.sh  cli_demo.py  copy_config_example.py  dataset-metadata.json  entrypoint.sh  get-pip.py  git简介.txt  init_database.py  keywords_preprocess.py  kill.sh  knowledge_based_chatglm.py  langchain_sample.yaml  (+32 more)
libs/chatchat-server/: Makefile  README.md  README_dev.md  README_en.md  README_xinference.md  graph_search_local_knowledgebase.py  pyproject.toml  test_st.py
libs/chatchat-server/chatchat/: __init__.py  cli.py  config_work_space.py  init_database.py  init_server.py  pydantic_settings_file.py  settings.py  startup.py  utils.py  webui.py
libs/chatchat-server/chatchat/configs/: __init__.py  _basic_config.py  _core_config.py  _kb_config.py  _model_config.py  _prompt_config.py  _server_config.py  model_providers.yaml
libs/chatchat-server/chatchat/server/: api_allinone_stale.py  llm_api_shutdown.py  llm_api_stale.py  localai_embeddings.py  pydantic_v2.py  utils.py  webui_allinone_stale.py
libs/chatchat-server/chatchat/server/agent/: agent_instruct.md  container.py
libs/chatchat-server/chatchat/server/agents_registry/: agents_registry.py
libs/chatchat-server/chatchat/server/api_server/: api_routes.py  api_schemas.py  chat_routes.py  flow_routes.py  graph_routes.py  kb_routes.py  mcp_routes.py  openai_routes.py  reranker_router.py  reranker_routes.py  server_app.py  server_routes.py  tool_routes.py
libs/chatchat-server/chatchat/server/callback_handler/: agent_callback_handler.py  conversation_callback_handler.py
libs/chatchat-server/chatchat/server/chat/: chat.py  (+10 more)
libs/chatchat-server/chatchat/webui_pages/: kb_chat.py  utils.py
libs/chatchat-server/langchain_chatchat/: __init__.py
libs/chatchat-server/langchain_chatchat/agent_toolkits/: __init__.py
libs/chatchat-server/langchain_chatchat/agents/: __init__.py  all_tools_agent.py
libs/chatchat-server/langchain_chatchat/callbacks/: __init__.py  agent_callback_handler.py
libs/chatchat-server/langchain_chatchat/chat_models/: __init__.py  base.py  platform_tools_message.py
libs/chatchat-server/langchain_chatchat/embeddings/: __init__.py  zhipuai.py
libs/chatchat-server/langchain_chatchat/utils/: __init__.py  history.py  try_parse_json_object.py
libs/chatchat-server/tests/: conftest.py  test_migrate.py  test_qwen_agent.py
libs/chatchat-server/tests/api/: test_kb_api.py  test_kb_api_request.py  test_kb_chat.py  test_kb_summary_api.py  test_openai_wrap.py  test_server_state_api.py  test_stream_chat_api.py  test_stream_chat_api_thread.py  test_tools.py
libs/chatchat-server/tests/custom_splitter/: test_different_splitter.py
libs/chatchat-server/tests/document_loader/: test_imgloader.py  test_pdfloader.py
libs/chatchat-server/tests/integration_tests/: test_json_output.py  test_sdk_import.py
libs/chatchat-server/tests/kb_vector_db/: test_faiss_kb.py  test_milvus_db.py  test_pg_db.py
libs/chatchat-server/tests/knowledge_base/: test_kb_doc_api.py
libs/chatchat-server/tests/samples/: ocr_test.docx  ocr_test.pptx
libs/chatchat-server/tests/unit_server/: test_init_server.py
libs/chatchat-server/tests/unit_tests/: test_code_interpreter.py  test_mcp_prompts.py  test_sdk_import.py  tittoken.py
libs/model-providers/: .env  README.md  README_en.md  model_providers.yaml  poetry.toml  pyproject.toml
libs/model-providers/model_providers/: __init__.py  __main__.py  _compat.py  _files.py  _models.py  _types.py
libs/model-providers/model_providers/_utils/: __init__.py  _typing.py
libs/model-providers/model_providers/bootstrap_web/: openai_bootstrap_web.py
libs/model-providers/model_providers/core/: model_manager.py  provider_manager.py
libs/model-providers/model_providers/errors/: error.py
libs/model-providers/model_providers/extensions/: ext_redis.py  ext_storage.py
libs/model-providers/scripts/: lint_imports.sh
libs/model-providers/tests/: conftest.py
libs/python-sdk/: README.md  pyproject.toml
libs/python-sdk/open_chatcaht/: _constants.py  _version.py  api_client.py  chatchat_api.py  exceptions.py  utils.py
libs/python-sdk/open_chatcaht/example/: setting_test.py
libs/python-sdk/open_chatcaht/tests/: chat_test.py  kb_test.py  server_test.py  standard_openai_test.py  tools_test.py
libs/python-sdk/open_chatchat/: _constants.py  _version.py  api_client.py  chatchat_api.py  exceptions.py  utils.py  version.py
libs/python-sdk/tests/: chat_test.py  kb_test.py  server_test.py  standard_openai_test.py  tools_test.py  装饰器声明请求_test.py  装饰器声明请求_test1.py
model_providers/: pyproject.toml
model_providers/model_providers/: __main__.py  ext_hosting_provider.py
model_providers/model_providers/bootstrap_web/: openai_bootstrap_web.py
model_providers/model_providers/core/: hosting_configuration.py  model_manager.py  provider_manager.py
model_providers/model_providers/core/bootstrap/: __init__.py
model_providers/model_providers/core/entities/: model_entities.py  provider_configuration.py  provider_entities.py
model_providers/model_providers/core/file/: file_obj.py  message_file_parser.py  upload_file_parser.py
model_providers/model_providers/core/helper/: model_provider_cache.py
model_providers/model_providers/core/utils/: generic.py
model_providers/model_providers/models/: model.py  provider.py
webui-pages/: README.md  pyproject.toml
webui-pages/chatchat_webui_pages/: loom_view_client.py  utils.py
webui-pages/chatchat_webui_pages/dialogue/: dialogue.py
webui-pages/chatchat_webui_pages/knowledge_base/: knowledge_base.py
webui-pages/chatchat_webui_pages/model_config/: model_config.py
webui-pages/chatchat_webui_pages/openai_plugins/: base.py
(+1897 files in other folders)
